--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <h1># Divide and Compare</h1>
     </header>
         <div id='hackyTable'>
-            <div id='playground'>
-            </div>
-            <div id='left-sidebar'>
-                <!-- div id='left-sidebar-toggle-div'>
-                    <a id='left-sidebar-toggle' href='index.html#'>show/hide</a>
+	    <div id="group-title"></div>
+            <div id='playground'></div>
+            <div id='right-sidebar'>
+                <!-- div id='right-sidebar-toggle-div'>
+                    <a id='right-sidebar-toggle' href='index.html#'>show/hide</a>
                 </div-->
-                <div id='left-sidebar-container'>
+                <div id='right-sidebar-container'>
                     <h2>
                         Group by:</h2>
                     <div>
@@ -53,13 +53,13 @@
                     </div>
                 </div>
             </div>
-            <div id='right-sidebar'>
+            <div id='left-sidebar'>
                 <!-- div>
-                    <a id='right-sidebar-toggle' href='index.html#'>show/hide</a>
+                    <a id='left-sidebar-toggle' href='index.html#'>show/hide</a>
                 </div -->
-                <div id='right-sidebar-color-container'>
+                <div id='left-sidebar-color-container'>
                 </div>
-                <div id='right-sidebar-size-container'>
+                <div id='left-sidebar-size-container'>
                 </div>
             </div>
         </div>
@@ -87,22 +87,22 @@
     <script type="text/javascript">
         $(function() {
             var controlsVisible = true;
-            $('#left-sidebar-toggle').click(function() {
-                controlsVisible = ! controlsVisible;
-                if (controlsVisible)
-                    $('#left-sidebar-container').slideDown('fast');
-                else
-                    $('#left-sidebar-container').slideUp('fast');
-            });
-        });
-        $(function() {
-            var controlsVisible = true;
             $('#right-sidebar-toggle').click(function() {
                 controlsVisible = ! controlsVisible;
                 if (controlsVisible)
                     $('#right-sidebar-container').slideDown('fast');
                 else
                     $('#right-sidebar-container').slideUp('fast');
+            });
+        });
+        $(function() {
+            var controlsVisible = true;
+            $('#left-sidebar-toggle').click(function() {
+                controlsVisible = ! controlsVisible;
+                if (controlsVisible)
+                    $('#left-sidebar-container').slideDown('fast');
+                else
+                    $('#left-sidebar-container').slideUp('fast');
             });
         });
         var initialise_form = function (selectionOptions) {
@@ -155,6 +155,7 @@
             var ResetGrouping = function () {
                 var groupBy = groupSelect.val();
                 console.log(groupBy);
+		$("div#group-title").text(keyToLookup(groupBy).title);
                 group_by(groupBy);
             };
 
@@ -180,7 +181,7 @@
             });
 
             $('.filter_block input').change(function () { ResetFilters(); });
-            $('#left-sidebar').fadeIn(2000);
+            $('#right-sidebar').fadeIn(2000);
         };
 
         function get_distinct_values(csv, keyType, key) {
@@ -245,16 +246,16 @@
         }
 
         function hide_color_chart() {
-            var right = $('#right-sidebar');
-            var rightContainer = $('#right-sidebar-color-container');
+            var right = $('#left-sidebar');
+            var rightContainer = $('#left-sidebar-color-container');
             right.fadeOut(500, function () {
                 rightContainer.empty();
             });
         }
 
         function hide_size_chart() {
-            var right = $('#right-sidebar');
-            var rightContainer = $('#right-sidebar-size-container');
+            var right = $('#left-sidebar');
+            var rightContainer = $('#left-sidebar-size-container');
             right.fadeOut(500, function () {
                 rightContainer.empty();
             });
@@ -262,8 +263,8 @@
 
 
         function show_color_chart(what_to_color_by, color_mapper) {
-            var right = $('#right-sidebar');
-            rightContainer = $('#right-sidebar-color-container');
+            var right = $('#left-sidebar');
+            rightContainer = $('#left-sidebar-color-container');
             right.fadeOut(500, function () {
                 rightContainer.empty();
 
@@ -274,9 +275,7 @@
 
                 var table = $('<table />');
                 for (var key in color_mapper) {
-
                     var row = $('<tr/>');
-
                     var cell = $('<td/>');
                     var square = $('<div style="width: 15px; height: 15px; background: ' + color_mapper[key] + ';">&nbsp;</div>');
                     square.appendTo(cell);
@@ -294,8 +293,8 @@
         }
 
         function show_size_chart(what_to_size_by, size_mapper) {
-            var right = $('#right-sidebar');
-            rightContainer = $('#right-sidebar-size-container');
+            var right = $('#left-sidebar');
+            rightContainer = $('#left-sidebar-size-container');
             right.fadeOut(500, function () {
                 rightContainer.empty();
 
